--- a/DI-app/src/app/View/user.component.html
+++ b/DI-app/src/app/View/user.component.html
@@ -23,14 +23,15 @@
         <br/>
           <div class="row">
             <div class="col-lg-6 col-lg-offset-3">
-                <table class="table table-striped table-bordered">
+                <!-- Show User list when it has records-->
+                <table *ngIf="userList.length > 0" class="table table-striped table-bordered">
                     <tr>
                         <th> Index</th>
                         <th> First Name</th>
                         <th> Last Name</th>
                     </tr>
                     <!-- Looping through userlist-->
-                    <tr  *ngFor="let user of userList; let i=index;">
+                    <tr *ngFor="let user of userList; let i=index;">
                         <td>{{i + 1}}</td>
                         <td>{{user.firstName}}</td>
                         <td>{{user.lastName}}</td>
